--- a/assets/swiper2.html
+++ b/assets/swiper2.html
@@ -66,6 +66,7 @@
     </style>
   </head>
   <body>
+    <base href="/">
     <!-- Slider main container -->
 <div class="mycontainer">
     <div class="container">
