--- a/assets/index.html
+++ b/assets/index.html
@@ -84,7 +84,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><div class="container"><img width="500px" src="./AmazonImage/beauty products.jpg" />
+        <div class="swiper-slide"><div class="container"><img width="500px" height="300px" src="blog1.jpg" />
             <div class="icons">
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
@@ -101,7 +101,7 @@
         </div>
         <div class="swiper-slide">
             <div class="container">
-                <img width="500px" src="./AmazonImage/New Arrival in toys.jpg" />
+                <img width="500px" height="300px" src="javascript.jpg" />
                 <div class="icons">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -118,7 +118,7 @@
         </div>
         <div class="swiper-slide">
             <div class="container">
-                <img width="400px" height="300px" src="./blog1.jpg" />
+                <img width="500px" height="300px" src="blog1.jpg" />
                 <div class="icons">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
