--- a/assets/index.html
+++ b/assets/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="swiper-slide">
             <div class="container">
-                <img width="500px" height="300px" src="javascript.jpg" />
+                <img width="500px" height="300px" src="blog1.jpg" />
                 <div class="icons">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
